Fix alignment issues on cart page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -91,6 +91,16 @@ img.rounded {
     margin-left: 150px;
 }
 
+.add-btn:hover {
+    background-color: white !important;
+    color: black !important;
+}
+
+.add-to-cart {
+    height: 43px;
+    font-size: 24px;
+}
+
 /* from Bulma */
 .icon {
     align-items: center;
@@ -98,6 +108,18 @@ img.rounded {
     justify-content: center;
     height: 1.5rem;
     width: 1.5rem;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 /* -------------------------------- Media Queries */
